price text change

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<div class="inner">
 											
 												<h2>Join or Renew Your Membership</h2>
-												<p>You can <a href="https://cityviewtennis.ca/shop/">renew or buy a new membership</a>. Become a City View Tennis Club Member! Our prices can't be beat: </p>
+												<p>You can <a href="https://cityviewtennis.ca/shop/">renew or buy a new membership</a>. Become a City View Tennis Club Member! </p>
 											
                                                 <ul>
                                                     <li>Family: $200</li>
