--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
-									<li><a href="gregory_uras.html">Coach Greg</a></li>
-								    <li><a href="alexander_renauldo.html">Coach Alex</a></li>
-									<li><a href="jason_yang.html">Coach Jason</a></li>
-									<li><a href="ethan_leong.html">Coach Ethan</a></li>
-									<li><a href="camps.html">Summer Camps</a></li>
+									<li><a href="">Membership</a></li>
+									<li><a href="">Programs</a>
+										<ul>
+											<li><a href="camps.html">Summer Camps</a></li>
+										</ul>
+									</li>
+									<li><a href="">Coaching Team</a>
+										<ul>
+											<li><a href="gregory_uras.html">Coach Greg</a></li>
+											<li><a href="alexander_renauldo.html">Coach Alex</a></li>
+											<li><a href="jason_yang.html">Coach Jason</a></li>
+											<li><a href="ethan_leong.html">Coach Ethan</a></li>
+										</ul>
+									</li>
+									<li><a href="">Other</a></li>
+									
 								</ul>
 							</nav>
 					</header>
@@ -71,7 +82,7 @@
                                                     <li>Single Adult: $130</li>
                                                     <li>Senior Adult: $110</li>
                                                     <li>Student: $80</li>
-                                                  <li>Junior: $40</li>
+                                                    <li>Junior: $40</li>
                                                 </ul>
                                                
 										</div>
