--- a/alexander_renauldo.html
+++ b/alexander_renauldo.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<a href="index.html"><img src="images/cvtc_logo.png"></a>
+								<a href="index.html"><img src="images/CVTC_white_green2.png" style="height: 116px;"></a>
 								
 							</div>
 
