--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<a href="index.html"><img src="images/cvtc_banner.png" style="max-width: 100%;"></a>
+								<a href="index.html"><img src="images/CVTC_white_green2.png" style="height: 116px;"></a>
 								
 							</div>
 
